# md-multiline-table

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CITATION.cff  LICENSE.md  README.md  REUSE.toml  mkdocs.yml  prek.toml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: main.yml
LICENSES/: LicenseRef-Proprietary-DLR.txt
docs/: coverage.md  index.md  testing.md
docs/images/: md-multiline-table.png.license
docs/javascripts/: katex.js
docs/styles/: styles.css
md_multiline_table/: __init__.py
scripts/: test.sh
src/md_multiline_table/: __init__.py
tests/: test_md_converter.py
tests/resources/: colon_example_1.md  colon_example_2.md  colon_example_3.md  default_markdown.md  plus_sign_example_1.md  plus_sign_example_2.md  plus_sign_example_3.md  solution.html
