# SPDX-FileCopyrightText: 2025 German Aerospace Center (DLR)
# SPDX-License-Identifier: Apache-2.0
#
[project]
# This is the name of your project. The first time you publish this
# package, this name will be registered for you. It will determine how
# users can install this project, e.g.:
#
# $ pip install md-multiline-table
#
# And where it will live on PyPI: https://pypi.org/project/md-multiline-table/
#
# There are some restrictions on what makes a valid project name
# specification here:
# https://packaging.python.org/specifications/core-metadata/#name
name = "md-multiline-table"  # Required

# Versions should comply with PEP 440:
# https://www.python.org/dev/peps/pep-0440/
#
# For a discussion on single-sourcing the version, see
# https://packaging.python.org/guides/single-sourcing-package-version/
version = "1.0.0"  # Required

# This is a one-line description or tagline of what your project does. This
# corresponds to the "Summary" metadata field:
# https://packaging.python.org/specifications/core-metadata/#summary
description = "Multiline Table extension for Python Markdown"  # Optional

# This is an optional longer description of your project that represents
# the body of text which users will see when they visit PyPI.
#
# Often, this is the same as your README, so you can just read it in from
# that file directly (as we have already done above)
#
# This field corresponds to the "Description" metadata field:
# https://packaging.python.org/specifications/core-metadata/#description-optional
readme = "README.md" # Optional

# Specify which Python versions you support. In contrast to the
# 'Programming Language' classifiers above, 'pip install' will check this
# and refuse to install the project if the version does not match. See
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#python-requires
requires-python = ">=3.7"

# This is either text indicating the license for the distribution, or a file
# that contains the license
# https://packaging.python.org/en/latest/specifications/core-metadata/#license
license = {file = "LICENSES/Apache-2.0.txt"}

# This field adds keywords for your project which will appear on the
# project page. What does your project relate to?
#
# Note that this is a list of additional keywords, separated
# by commas, to be used to assist searching for the distribution in a
# larger catalog.
keywords = ["dlr", "markdown", "extension", "mkdocs", "documentation", "tables"]  # Optional

# This should be your name or the name of the organization who originally
# authored the project, and a valid email address corresponding to the name
# listed.
authors = [
  {name="Florian Heinrich", email="florian.heinrich@dlr.de"} # Optional
]

# This should be your name or the names of the organization who currently
# maintains the project, and a valid email address corresponding to the name
# listed.
maintainers = [
  {name="Florian Heinrich", email="florian.heinrich@dlr.de"} # Optional
]

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [  # Optional
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Operating System :: OS Independent",

  # Pick your license as you wish
  "License :: OSI Approved :: Apache Software License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

# This field lists other packages that your project depends on to run.
# Any package you put here will be installed by pip when your project is
# installed, so they must be valid existing projects.
#
# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [ # Optional
  "markdown==3.10",
]

# List additional groups of dependencies here (e.g. development
# dependencies). Users will be able to install these using the "extras"
# syntax, for example:
#
#   $ pip install -U -e ".[all]"
#
# Similar to `dependencies` above, these must be valid existing
# projects.
[project.optional-dependencies] # Optional
dev = [
  "pre-commit>=3.5.0",
  "reuse>=4.0.0",
]
test = [
  "black",
  "coverage",
  "licensecheck",
  "mypy",
  "ruff",
  "shellcheck-py",
  "tox",
]
stubs = [
  "types-Markdown~=3.10.0",
]
doc = [
  "mkdocs-material",
  "mkdocs-api-autonav",  # includes mkdocstrings-python
  "mkdocs-minify-plugin",
  "mkdocs-coverage>=2.0.0",
]
all = ["md-multiline-table[dev,test,stubs,doc]"]

# List URLs that are relevant to your project
#
# This field corresponds to the "Project-URL" and "Home-Page" metadata fields:
# https://packaging.python.org/specifications/core-metadata/#project-url-multiple-use
# https://packaging.python.org/specifications/core-metadata/#home-page-optional
#
# Examples listed include a pattern for specifying where the package tracks
# issues, where the source is hosted, where to say thanks to the package
# maintainers, and where to support the project financially. The key is
# what's used to render the link text on PyPI.
[project.urls]  # Optional
# "Changelog" = "https://github.com/DLR-KI/md-multiline-table/blob/main/CHANGELOG.md"
"Documentation" = "https://dlr-ki.github.io/md-multiline-table"
"Homepage" = "https://github.com/DLR-KI/md-multiline-table"
"Issue Tracker" = "https://github.com/DLR-KI/md-multiline-table/issues"
# "Release Notes" = "https://github.com/DLR-KI/md-multiline-table/releases"
"Source Code" = "https://github.com/DLR-KI/md-multiline-table"

# The following would provide a command line executable called `md-multiline-table`
# which executes the function `main` inside `__main__.py` from this package when invoked.
[project.scripts]  # Optional
# md-multiline-table = "md_multiline_table.__main__:main"

[project.entry-points."markdown.extensions"]
"md-multiline-table" = "md_multiline_table:MultilineTableExtension"

# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
include-package-data = true
license-files = ["LICENSE.md", "LICENSES/*.txt"]

[tool.setuptools.packages.find]
include = ["md_multiline_table*"]
namespaces = false

[tool.setuptools.package-data]
md_multiline_table = ["py.typed"]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

#######################################################################################################################

# licensecheck
# https://github.com/FHPythonUtils/LicenseCheck/blob/master/README.md

[tool.licensecheck]
using = "PEP631:doc"
zero = true

#######################################################################################################################

# ruff
# https://docs.astral.sh/ruff/settings/

[tool.ruff]
line-length = 120
extend-exclude = [
  ".build",
  "*.egg-info",
  "__pycache__",
  "Interactive-1.interactive",
]

[tool.ruff.lint]
extend-select = ["B", "D", "E", "I", "UP", "Q"]
extend-ignore = ["ANN003", "D100", "D212", "D418", "S101"]
# or be more strict:
# select = ["ALL"]
# extend-ignore = [
#   "PLR", "T", "TRY",
#   "ANN003", "D212", "D418", "S101",
# ]

[tool.ruff.lint.isort]
# https://docs.astral.sh/ruff/settings/#lintisort
force-sort-within-sections = true
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/test_*.py" = ["D"]

#######################################################################################################################

# coverage
# https://coverage.readthedocs.io/en/latest/config.html

[tool.coverage.run]
branch = true
source = ["md_multiline_table"]

[tool.coverage.report]
# regexes for lines to exclude from consideration
exclude_lines = [
  # have to re-enable the standard pragma
  "pragma: no cover",
  "@overload",
  # don't complain about missing debug-only code
  "def __repr__",
  "if self\\.debug",
  # don't complain if tests don't hit defensive assertion code
  "raise AssertionError",
  "raise NotImplementedError",
  # don't complain if non-runnable code isn't run
  "if 0:",
  "if False:",
  "if __name__ == .__main__.:",
  # don't complain about abstract methods, they aren't run
  "@(abc\\.)?abstractmethod",
]

ignore_errors = true
skip_empty = true

[tool.coverage.html]
title = "Coverage report for md-multiline-table"
