# SPDX-FileCopyrightText: 2026 German Aerospace Center (DLR)
# SPDX-License-Identifier: Apache-2.0
#
[project]
# This is the name of your project. The first time you publish this
# package, this name will be registered for you. It will determine how
# users can install this project, e.g.:
#
# $ pip install md-multiline-table
#
# And where it will live on PyPI: https://pypi.org/project/md-multiline-table/
#
# There are some restrictions on what makes a valid project name
# specification here:
# https://packaging.python.org/specifications/core-metadata/#name
name = "md-multiline-table"  # Required

# Versions should comply with PEP 440:
# https://www.python.org/dev/peps/pep-0440/
#
# For a discussion on single-sourcing the version, see
# https://packaging.python.org/guides/single-sourcing-package-version/
version = "1.1.0"  # Required

# This is a one-line description or tagline of what your project does. This
# corresponds to the "Summary" metadata field:
# https://packaging.python.org/specifications/core-metadata/#summary
description = "Multiline Table extension for Python Markdown"  # Optional

# This is an optional longer description of your project that represents
# the body of text which users will see when they visit PyPI.
#
# Often, this is the same as your README, so you can just read it in from
# that file directly (as we have already done above)
#
# This field corresponds to the "Description" metadata field:
# https://packaging.python.org/specifications/core-metadata/#description-optional
readme = "README.md" # Optional

# Specify which Python versions you support. In contrast to the
# 'Programming Language' classifiers above, 'pip install' will check this
# and refuse to install the project if the version does not match. See
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#python-requires
requires-python = ">=3.11"

# SPDX license expression indicating the license for the distribution.
# Value is mapped to the License-Expression field in the core metadata.
# https://packaging.python.org/en/latest/specifications/core-metadata/#license-expression
license = "Apache-2.0"

# License file paths relative to the project root directory.
# https://packaging.python.org/en/latest/specifications/core-metadata/#license-expression
license-files = ["LICENSE.md", "LICENSES/*"]

# This field adds keywords for your project which will appear on the
# project page. What does your project relate to?
#
# Note that this is a list of additional keywords, separated
# by commas, to be used to assist searching for the distribution in a
# larger catalog.
keywords = ["dlr", "markdown", "extension", "mkdocs", "documentation", "tables"]  # Optional

# This should be your name or the name of the organization who originally
# authored the project, and a valid email address corresponding to the name
# listed.
authors = [
  {name="Florian Heinrich", email="florian.heinrich@dlr.de"} # Optional
]

# This should be your name or the names of the organization who currently
# maintains the project, and a valid email address corresponding to the name
# listed.
maintainers = [
  {name="Florian Heinrich", email="florian.heinrich@dlr.de"} # Optional
]

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [  # Optional
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Operating System :: OS Independent",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Programming Language :: Python :: 3 :: Only",
]

# This field lists other packages that your project depends on to run.
# Any package you put here will be installed by pip when your project is
# installed, so they must be valid existing projects.
#
# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [ # Optional
  "markdown>=3.10",
]

# This specification defines dependency groups, a mechanism for storing
# package requirements in pyproject.toml files such that they are not
# included in project metadata when it is built.
#
# Dependency groups are suitable for internal development use-cases like
# linting and testing, as well as for projects which are not built for
# distribution, like collections of related scripts.
#
#   $ pip install -U -e --group all
#   $ uv sync --group all
#   $ uv sync --all-groups
#
[dependency-groups]  # Optional
dev = [
  "prek>=0.3.5",
  "shellcheck-py",
  "reuse>=6.2.0",
  "ruff>=0.15.5",
  "ty>=0.0.21",
  "uv>=0.10.9",
]
test = [
  "coverage",
  "licensecheck",
  "pytest",
  "pytest-cov",
]
ci = [
  "anybadge",
  "codeclimate-test-reporter",
  "flake8-docstrings-complete",
  "flake8-docstrings",
  "flake8-gl-codeclimate",
  "flake8-pyproject",
  "flake8",
  "pylint-gitlab",
  "pylint-per-file-ignores",
  "pylint",
  "typos",
  "typos-gitlab-code-quality"
]
stubs = [
  "types-Markdown>=3.10",
]
doc = [
  "mkdocs",
  "mkdocs-awesome-pages-plugin",
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-material",
  "mkdocs-minify-plugin~=0.8.0",
  "mkdocs-api-autonav~=0.3.0",
  "mkdocstrings",
  "mkdocstrings-python",
  "pymdown-extensions",
  "mkdocs-coverage>=2.0.0",
]
all = [
  {include-group = "dev"},
  {include-group = "test"},
  {include-group = "ci"},
  {include-group = "stubs"},
  {include-group = "doc"},
]

# List URLs that are relevant to your project
#
# This field corresponds to the "Project-URL" and "Home-Page" metadata fields:
# https://packaging.python.org/specifications/core-metadata/#project-url-multiple-use
# https://packaging.python.org/specifications/core-metadata/#home-page-optional
#
# Examples listed include a pattern for specifying where the package tracks
# issues, where the source is hosted, where to say thanks to the package
# maintainers, and where to support the project financially. The key is
# what's used to render the link text on PyPI.
[project.urls]  # Optional
# "Changelog" = "https://github.com/DLR-KI/md-multiline-table/blob/main/CHANGELOG.md"
"Documentation" = "https://dlr-ki.github.io/md-multiline-table"
"Homepage" = "https://github.com/DLR-KI/md-multiline-table"
"Issue Tracker" = "https://github.com/DLR-KI/md-multiline-table/issues"
# "Release Notes" = "https://github.com/DLR-KI/md-multiline-table/releases"
"Source Code" = "https://github.com/DLR-KI/md-multiline-table"

# The following would provide a command line executable called `md-multiline-table`
# which executes the function `main` inside `__main__.py` from this package when invoked.
[project.scripts]  # Optional
# md-multiline-table = "md_multiline_table.__main__:main"

[project.entry-points."markdown.extensions"]
"md-multiline-table" = "md_multiline_table:MultilineTableExtension"

# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
include-package-data = true

[tool.setuptools.packages.find]
include = ["md_multiline_table*"]
namespaces = false

[tool.setuptools.package-data]
md_multiline_table = ["py.typed"]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.ty.src]
include = ["src", "tests", "scripts"]

[tool.uv]
exclude-newer = "7 days"

#######################################################################################################################

# licensecheck
# https://github.com/FHPythonUtils/LicenseCheck/blob/master/README.md

[tool.licensecheck]
using = "PEP631:doc"
zero = true

#######################################################################################################################

# ruff
# https://docs.astral.sh/ruff/settings/

[tool.ruff]
extend-exclude = [
  ".build",
  "*.egg-info",
  "__pycache__",
  "Interactive-1.interactive",
]
line-length = 120
target-version = "py311"

[tool.ruff.format]
preview = true

[tool.ruff.lint]
extend-ignore = ["ANN003", "D100", "D212", "D418", "S101", "E203", "D105"]
extend-select = ["B", "D", "E", "I", "UP", "Q", "TID252"]
fixable = ["ALL"]
preview = true
# or be more strict:
# extend-ignore = [
#   "PLR", "T", "TRY",
#   "ANN003", "D212", "D418", "S101",
# ]
# select = ["ALL"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
# https://docs.astral.sh/ruff/settings/#lintisort
force-sort-within-sections = true
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"tests/**/test_*.py" = [
  "S101",
  "ANN201",
  "ANN205",
  "D",
  "E501",
  "PLR0904",
  "PLC2701",
  "PLC0415",
  "PLR2004",
  "SLF001",
  "S307"
]

[tool.ruff.lint.pydocstyle]
convention = "google"
# max-doc-length = 80

#######################################################################################################################

# coverage
# https://coverage.readthedocs.io/en/latest/config.html

[tool.coverage.html]
title = "Coverage report for md-multiline-table"

[tool.coverage.report]
# regexes for lines to exclude from consideration
exclude_lines = [
  # have to re-enable the standard pragma
  "pragma: no cover",
  "@overload",
  # don't complain about missing debug-only code
  "def __repr__",
  "if self\\.debug",
  # don't complain if tests don't hit defensive assertion code
  "raise AssertionError",
  "raise NotImplementedError",
  # don't complain if non-runnable code isn't run
  "if 0:",
  "if False:",
  "if __name__ == .__main__.:",
  # don't complain about abstract methods, they aren't run
  "@(abc\\.)?abstractmethod",
]
ignore_errors = true
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]

#######################################################################################################################

# pytest
# https://docs.pytest.org/en/latest

[tool.pytest.ini_options]
addopts = "--cov=src/ --cov-report=term-missing --cov-report=xml:build/coverage.xml --cov-report=html:build/htmlcov --junitxml=build/report.xml"
python_files = "test_*.py"
testpaths = ["tests"]

##########################################################################################################################

# flake8
# https://flake8.pycqa.org/en/latest/user/configuration.html

[tool.flake8]
check-return-types = true
extend-ignore = ["DCO010", "DCO060"]
max-complexity = "10"
max-line-length = "120"
per-file-ignores = []
select = "DCO, DOC"
style = "google"

############################################################################################################################

# pylint
# https://pylint.pycqa.org/en/latest/user_guide/run.html#command

[tool.pylint.main]
extension-pkg-allow-list = []
load-plugins = ["pylint_per_file_ignores"]
recursive = true

[tool.pylint.'MESSAGES CONTROL']
disable = "C0114"
# C0114: missing-module-docstring
max-line-length = "120"

[tool.pylint.'MESSAGES CONTROL'.per-file-ignores]
"docs/conf.py" = "C0103,W0622"  # for copyright notice
# C0103: invalid-name (to ignore constant name not UPPER_CASE)
# W0622: redefined-builtin
"tests/**/*" = "C0114,C0116,R0903,R0904,W0212"
# C0114: missing-module-docstring
# C0116: missing-function-docstring
# R0903: too-few-public-methods
# R0904: too-many-public-methods
# W0212: protected-access

[tool.pylint.SIMILARITIES]
ignore-comments = "yes"
ignore-docstrings = "yes"
ignore-imports = "yes"
min-similarity-lines = 10
